                                                     -*- coding: utf-8 -*-
Changes with APR-util 1.3.0

  *) Fix the make test target in the spec file. [Graham Leggett]

  *) Expose the SSL EVP interface to encrypt and decrypt arbitrary
     blocks of data, using symmetrical keys. Experimental support for
     asymmetrical public/private keys as supported by OpenSSL v0.9.9.
     [Graham Leggett]

  *) Introduce apr_dbd_open_ex() [Bojan Smojver]

  *) Make md5 hash files portable between EBCDIC and ASCII platforms  
     [David Jones]

  *) Add limited apr_dbd_freetds driver (MSSQL and Sybase) [Nick Kew]

  *) Commit relicensed apr_dbd_mysql driver to /trunk/  [Nick Kew]

  *) Support BerkeleyDB 4.6.  [Arfrever Frehtes Taifersar Arahesis]

  *) Support Tivoli ITDS LDAP client library.  [Paul Reder]

  *) Portably implement testdate's long-time constants to solve
     compilation faults where #LL isn't valid.  [Curt Arnold]

  *) Use buffered I/O with SDBM.  [Joe Schaefer]

  *) Unify parsing of prepared statements and add binary argument functions
     to DBD [Bojan Smojver with help from many on the APR list]

  *) Support building DBD drivers as DSOs; use --enable-dbd-dso flag
     to configure.  [Joe Orton, Bojan Smojver]

  *) Rewrite detection of expat in configure to fix build on e.g. biarch
     Linux platforms.  PR 28205.  [Joe Orton]

  *) Add apr_thread_pool implementation.  [Henry Jen <henryjen ztune.net>]

  *) Add support for Berkeley DB 4.5 to the configure scripts.
     [Garrett Rooney]

  *) Allow apr_queue.h to be included before other APR headers.
     PR 40891 [Henry Jen <henryjen ztune.net>]

  *) Fix precedence problem in error checking for sdbm dbm back end.
     PR 40659 [Larry Cipriani <lvc lucent.com>]

  *) Add an apr_reslist_acquired_count, for determining how many outstanding
     resources there are in a reslist.  [Ryan Phillips <ryan trolocsis.com>]

  *) Provide folding in autogenerated .manifest files for Win32 builders