@@ -231,6 +231,7 @@ FILES_lib_objs = \
 	$(OBJDIR)/apr_ldap_init.o \
 	$(OBJDIR)/apr_ldap_option.o \
 	$(OBJDIR)/apr_ldap_url.o \
+	$(OBJDIR)/apr_ldap_rebind.o \
 	$(EOLIST)
 
 #
